app/styles/index.less
* {
  box-sizing: border-box;
}

body,
html,
body > div {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: black;
  font-size: 12px;
  height: 100%;
  max-height: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

body {
  background-color: rgb(51, 51, 51);
}

.topBar {
  height: 40px;
  background-color: #29487D;
}

.mainContent {
  height: calc(100% - 40px);
}


.canvas {
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: white;
}

.button {
    border-style: solid;
    border-color: transparent;
    border-radius: 15px;
    margin: 5px;
}

.content {
  float: left;
  position: relative;
}

.startContent {
    display:flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    align-items: center;
}

.startButton {
    border-style: solid;
    border-color: transparent;
    border-radius: 25px;
    background-color: #29487D;
    color: white;
    font-size: 1.8vw;
    font-weight: 900;
    font-family: Quicksand;
    padding: 2% 8% 2% 8%;
    margin: 5%;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
    transition: all 0.3s ease 0s;
    text-decoration: none;
}

.startButton:hover {
    background-color: white;
    color: #29487D;
    border-color: #29487D;
}

.checkingBox {
    background-color: #29487D;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-content: center;
    align-items: center;
    height: 65vh;
    width: 40vw;
    border-radius: 25px;
    padding-top: 3%;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
}

.checkingHeading {
    font-family: Quicksand;
    font-size: 2vw;
    font-weight: 700;
    color: white
}

.question {
    display:flex;
    align-content: center;
    justify-content: center;
    align-items: center;
    background-color: white;
    height: 5%;
    width: 70%;
    margin-top: 5%;
    border-radius: 15px;
    color: #29487D;
    font-size: 1vw;
    font-family: Quicksand;
    font-weight: 900;
}

.checkingButton {
    border-style: solid;
    border-color: transparent;
    border-radius: 25px;
    background-color: white;
    color: #29487D;
    font-size: 1vw;
    font-weight: 900;
    font-family: Quicksand;
    padding: 2% 8% 2% 8%;
    margin-top: 10%;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.25);
    transition: all 0.3s ease 0s;
    text-decoration: none;
}

.checkingButton:hover {
    background-color: #29487D;
    color: white;
    border-color: white;
}

.left, .right {
  width: 50%;
  height: 100%;
}

.right {
  left: 0%;
}

.top, .bottom {
  width: 100%;
  height: 50%;
}

.bottom {
  top: 0%;
}

.left, .right, .top, .bottom {
  padding: 10px;
}

.divider {
  float: none;
  overflow: hidden;
  background-color: red;
  position:absolute;
}

.divider.vertical {
  width: 20px;
  height: 100%;
  left: calc(50% - 10px);
  cursor: w-resize;
}

.divider.horizontal {
  height: 20px;
  width: 100%;
  top: calc(50% - 10px);
  cursor: n-resize;
}

// Overwrite changes from bootstrap.min.css
.djs-palette .separator {
  background-color: transparent;
  opacity: 1;
}

